--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h2 class="title">About US</h2>
         <div class="about-content">
             <div class="column left">
-                <img src="C:\Users\Divesh\Downloads\photo studio.jpg" alt="">
+                <img src="photo studio.jpg" alt="">
             </div>
             <div class="column right">
                 <div class="text">We value your artistic <span class="typing">to create art</span></div>
